# poryan

./: README.md
io-project-monadic/: Animation.hs  CHANGELOG.md  io-project-monadic.cabal
io-project-monadic/app/: Main.hs
io-project-monadic/src/Animation/: Animate.hs  CLI.hs  Draw.hs  State.hs
