cabal-version:      2.4
name:               io-project-monadic
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Monadic implementation of Animation project for Emurgo Cardano Dev course

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Philip Jacob
maintainer:         philjacobm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable animation-cli
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , animation
                    , mtl
                    , transformers
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010

library animation
    build-depends:   base ^>=4.14.1.0
                    , mtl
    exposed-modules:   Animation.State
                     , Animation.Animate
                     , Animation.CLI
    other-modules:   Animation.Draw
    hs-source-dirs:   src
    default-language: Haskell2010
		